<?xml version="1.0" encoding="utf-8"?>
<!---<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListItemsActivity">

</androidx.constraintlayout.widget.ConstraintLayout>-->

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:background="@color/gold"
    android:columnCount="2"
    android:rowCount="2">
    <RadioButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/radio_option_text" />
    <CheckBox
        android:id="@+id/checkBoxOption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/checkBox_text" />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchToggle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:minHeight="48dp"
        android:text="@string/switch_text" />
    <ImageButton
        android:id="@+id/imageButtonCamera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:src="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/camera_icon_desc" />


</GridLayout>